TrackPanel no longer implements label keystrokes, drags, text selection...
... also implemented ESC key for those drags

... temporarily loses the special CTRL click handling

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -551,6 +551,12 @@ audacity_SOURCES = \
 	toolbars/ToolsToolBar.h \
 	toolbars/TranscriptionToolBar.cpp \
 	toolbars/TranscriptionToolBar.h \
+	tracks/labeltrack/ui/LabelDefaultClickHandle.cpp \
+	tracks/labeltrack/ui/LabelDefaultClickHandle.h \
+	tracks/labeltrack/ui/LabelGlyphHandle.cpp \
+	tracks/labeltrack/ui/LabelGlyphHandle.h \
+	tracks/labeltrack/ui/LabelTextHandle.cpp \
+	tracks/labeltrack/ui/LabelTextHandle.h \
 	tracks/labeltrack/ui/LabelTrackControls.cpp \
 	tracks/labeltrack/ui/LabelTrackControls.h \
 	tracks/labeltrack/ui/LabelTrackUI.cpp \
