Don't copy wxFileName often, it's not lightweight!  Use wxFileNameWrapper...
... which is a new class that defines moves.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -248,6 +248,7 @@ audacity_SOURCES = \
 	WaveTrackLocation.h \
 	WrappedType.cpp \
 	WrappedType.h \
+	wxFileNameWrapper.h \
 	commands/AppCommandEvent.cpp \
 	commands/AppCommandEvent.h \
 	commands/BatchEvalCommand.cpp \
