--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1723,6 +1723,9 @@
     <ClInclude Include="..\..\..\src\MemoryX.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\wxFileNameWrapper.h">
+      <Filter>src</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\..\src\effects\Equalization48x.h">
       <Filter>src\effects</Filter>
     </ClInclude>
