--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,38 @@ mac/tests/
 *.out
 *.app
 
+# Executable without extension
+/audacity
+src/audacity
+lib-src/expat/examples/elements
+lib-src/expat/examples/outline
+lib-src/expat/xmlwf/xmlwf
+lib-src/libflac/examples/c/decode/file/example_c_decode_file
+lib-src/libflac/examples/c/encode/file/example_c_encode_file
+lib-src/libflac/examples/cpp/decode/file/example_cpp_decode_file
+lib-src/libflac/examples/cpp/encode/file/example_cpp_encode_file
+lib-src/libflac/src/flac/flac
+lib-src/libflac/src/metaflac/metaflac
+lib-src/libflac/src/test_grabbag/cuesheet/test_cuesheet
+lib-src/libflac/src/test_grabbag/picture/test_picture
+lib-src/libflac/src/test_libFLAC++/test_libFLAC++
+lib-src/libflac/src/test_libFLAC/test_libFLAC
+lib-src/libflac/src/test_seeking/test_seeking
+lib-src/libflac/src/test_streams/test_streams
+lib-src/libogg/src/test_bitwise
+lib-src/libogg/src/test_framing
+lib-src/libsndfile/src/G72x/g72x_test
+lib-src/libsndfile/src/test_main
+lib-src/libsoxr/examples/1a-lsr
+lib-src/libsoxr/examples/3-options-input-fn
+lib-src/libsoxr/tests/vector-cmp
+lib-src/libsoxr/tests/vector-gen
+lib-src/libvorbis/lib/test_sharedbook
+lib-src/portaudio-v19/bin/
+lib-src/soundtouch/source/SoundStretch/soundstretch
+lib-src/twolame/frontend/twolame
+lib-src/twolame/simplefrontend/stwolame
+
 # Mac Specific
 .DS_Store
 xcuserdata
