--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ stamp-h*
 stamp-po
 *.stamp
 
+# Handcrafted makefiles
+!lib-src/expat/amiga/Makefile
+!lib-src/libnyquist/nyquist/sys/unix/*/Makefile
+!lib-src/lv2/Makefile
+!lib-src/mod-script-pipe/Makefile
+
 # Generated files by build system
 lib-src/expat/expat_config.h
 lib-src/libflac/doc/Doxyfile
