Add files to Windows build

--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="..\..\..\src\Diags.cpp" />
     <ClCompile Include="..\..\..\src\DirManager.cpp" />
     <ClCompile Include="..\..\..\src\Dither.cpp" />
+    <ClCompile Include="..\..\..\src\effects\Distortion.cpp" />
     <ClCompile Include="..\..\..\src\effects\EffectRack.cpp" />
     <ClCompile Include="..\..\..\src\effects\Equalization48x.cpp" />
     <ClCompile Include="..\..\..\src\effects\NoiseReduction.cpp" />
@@ -423,6 +424,7 @@
     <ClInclude Include="..\..\..\src\commands\OpenSaveCommands.h" />
     <ClInclude Include="..\..\..\src\DeviceChange.h" />
     <ClInclude Include="..\..\..\src\Diags.h" />
+    <ClInclude Include="..\..\..\src\effects\Distortion.h" />
     <ClInclude Include="..\..\..\src\effects\EffectRack.h" />
     <ClInclude Include="..\..\..\src\effects\Equalization48x.h" />
     <ClInclude Include="..\..\..\src\effects\NoiseReduction.h" />
