--- a/win/audacity.rc
+++ b/win/audacity.rc
@@ -22,14 +22,14 @@ BEGIN
     BEGIN
         BLOCK "040904b0"
         BEGIN
-            VALUE "CompanyName", "The Audacity Team"
-            VALUE "FileDescription", "Audacity®, the Free, Cross-Platform Sound Editor"
+            VALUE "CompanyName", "Extended Audacity Team"
+            VALUE "FileDescription", "A customised Audacity® Cross-Platform Sound Editor"
             VALUE "FileVersion", AUDACITY_FILE_VERSION
-            VALUE "InternalName", "Audacity"
-            VALUE "LegalCopyright", "Copyright © 2015. All rights reserved."
+            VALUE "InternalName", "DarkAudacity"
+            VALUE "LegalCopyright", "Copyright © 2016. All rights reserved."
             VALUE "LegalTrademarks", "Audacity® is a registered trademark of Dominic Mazzoni."
-            VALUE "OriginalFilename", "Audacity.exe"
-            VALUE "ProductName", "Audacity®"
+            VALUE "OriginalFilename", "DarkAudacity.exe"
+            VALUE "ProductName", "DarkAudacity®"
             VALUE "ProductVersion", AUDACITY_FILE_VERSION
         END
     END
