--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -884,6 +884,9 @@
     <ClCompile Include="..\..\..\src\effects\Distortion.cpp">
       <Filter>src\effects</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\toolbars\ScrubbingToolBar.cpp">
+      <Filter>src\toolbars</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\src\AboutDialog.h">
@@ -1788,6 +1791,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\src\effects\Distortion.h">
       <Filter>src\effects</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\toolbars\ScrubbingToolBar.h">
+      <Filter>src\toolbars</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
