Compensate for wxW 3 tab navigation deficiencies on Mac...
... using char hook event handlers.  We don't need to go the extreme length
of patching wxWidgets source.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -584,6 +584,8 @@ audacity_SOURCES = \
 	widgets/valnum.h \
 	widgets/Warning.cpp \
 	widgets/Warning.h \
+	widgets/wxPanelWrapper.cpp \
+	widgets/wxPanelWrapper.h \
 	xml/XMLFileReader.cpp \
 	xml/XMLFileReader.h \
 	xml/XMLWriter.cpp \
