--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -231,6 +231,7 @@
     <ClCompile Include="..\..\..\src\widgets\NumericTextCtrl.cpp" />
     <ClCompile Include="..\..\..\src\widgets\Overlay.cpp" />
     <ClCompile Include="..\..\..\src\widgets\OverlayPanel.cpp" />
+    <ClCompile Include="..\..\..\src\widgets\wxPanelWrapper.cpp" />
     <ClCompile Include="..\..\..\src\WrappedType.cpp" />
     <ClCompile Include="..\..\..\src\effects\Amplify.cpp" />
     <ClCompile Include="..\..\..\src\effects\AutoDuck.cpp" />
@@ -462,6 +463,7 @@
     <ClInclude Include="..\..\..\src\widgets\NumericTextCtrl.h" />
     <ClInclude Include="..\..\..\src\widgets\Overlay.h" />
     <ClInclude Include="..\..\..\src\widgets\OverlayPanel.h" />
+    <ClInclude Include="..\..\..\src\widgets\wxPanelWrapper.h" />
     <ClInclude Include="..\..\..\src\wxFileNameWrapper.h" />
     <ClInclude Include="..\..\configwin.h" />
     <ClInclude Include="..\..\..\src\Dependencies.h" />
