--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -887,6 +887,9 @@
     <ClCompile Include="..\..\..\src\toolbars\ScrubbingToolBar.cpp">
       <Filter>src\toolbars</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\src\widgets\wxPanelWrapper.cpp">
+      <Filter>src\widgets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\src\AboutDialog.h">
@@ -1794,6 +1797,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\src\toolbars\ScrubbingToolBar.h">
       <Filter>src\toolbars</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\widgets\wxPanelWrapper.h">
+      <Filter>src\widgets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
